fix spacing and add quote

--- a/src/screens/Zines/Zines.scss
+++ b/src/screens/Zines/Zines.scss
@@ -18,6 +18,13 @@
     }
 
     .zinesSection {
+      p {
+        text-align: justify;
+      }
+
+      .raincoatsQuote {
+        text-indent: 1rem;
+      }
     }
 
     .imagePlaceholder {
